[package]
name = "hologram-onnx-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ONNX protobuf definitions for Hologram"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = "0.13"
