[package]
name = "hologram-ai-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hologram_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hologram-ai-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "process"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot.workspace = true
dirs.workspace = true
which.workspace = true
